--- a/src/Components/NavigationBar/MobileNavBar/styles.module.css
+++ b/src/Components/NavigationBar/MobileNavBar/styles.module.css
@@ -37,6 +37,7 @@
     margin: 0px;
     padding: 40px 32px;
     position: fixed;
+    z-index: var(--closest);
     top: 0px;
     left: 0px;
     background-color: rgba(36, 42, 69, 0.95);
@@ -58,7 +59,7 @@
     cursor: pointer;
 }
 
-.menu_links{
+.menu_buttons{
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -69,15 +70,15 @@
     padding: 0px;
 }
 
-.menu_links > li {
+.menu_buttons > li {
     width: 100%;
 }
 
-.menu_links > li{
+.menu_buttons > li{
     border-top: 1px solid rgba(255, 255, 255, 0.15)
 }
 
-.menu_link{
+.menu_button{
     width: 100%;
     height: 65px;
     border: none;
