--- a/src/Components/Features/Carousel/styles.module.css
+++ b/src/Components/Features/Carousel/styles.module.css
@@ -15,7 +15,7 @@
     display: flex;
     justify-content: center;
     align-items: start;
-    color: #242A45;
+    color: rgba(36, 42, 69, 0.75);
     font-family: var(--font);
     font-size: 1rem;
     font-style: normal;
@@ -25,24 +25,87 @@
     cursor: pointer;
 }
 
-.features_line{
+.line_one, .line_two, .line_three{
     width: 243px;
     height: 4px;
     background-color: #FA5959;
     position: absolute;
     bottom: 0px;
+    transition: none;
 }
 
-.features_line:nth-of-type(1){
+.line_one{
     left: 0px;
 }
 
-.features_line:nth-of-type(2){
+.line_two{
     left: 0px;
     right: 0px;
     margin: auto;
 }
 
-.features_line:nth-of-type(3){
+.line_three{
     right: 0px;
+}
+
+.carousel{
+    width: 1106px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.carousel_image{
+    width: 536px;
+    object-fit: contain;
+}
+
+.carousel_content{
+    width: 445px;
+    display: flex;
+    flex-direction: column;
+}
+
+.carousel_content > h2{
+    color: #242A45;
+    font-family: var(--font);
+    font-size: 2rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 52px; /* 162.5% */
+    letter-spacing: -0.1px;
+    margin: 0px 0px 16px 0px;
+}
+
+.carousel_content > p{
+    color: rgba(36, 42, 69, 0.5);
+    font-family: var(--font);
+    font-size: 1.125rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px; /* 155.556% */
+    margin: 0px 0px 32px 0px;
+}
+
+.carousel_content > button{
+    width: 114px;
+    height: 48px;
+    border-radius: 5px;
+    background-color: #5267DF;
+    box-shadow: 0px 8px 8px -4px rgba(73, 93, 207, 0.20);
+    border: none;
+    color: #FFF;
+    font-family: var(--font);
+    font-size: 0.875rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 28px; /* 200% */
+    letter-spacing: 0.25px;
+    cursor: pointer;
+    border: 2px solid #5267DF;
+}
+
+.carousel_content > button:hover{
+    color: #5267DF;
+    background-color: transparent;
 }
