--- a/src/Components/Features/styles.module.css
+++ b/src/Components/Features/styles.module.css
@@ -1,10 +1,26 @@
+.overlay{
+    position: relative;
+}
+
+.bg_two{
+    width: 500px;
+    height: 352px;
+    border-radius: 0px 316.5px 316.5px 0px;
+    background: #5267DF;
+    position: absolute;
+    z-index: var(--farthest);
+    left: 0px;
+    top: 428px;
+}
+
 .features{
+    width: 1106px;
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 0px auto 238px auto;
     position: relative;
-    z-index: var(--close)
+    z-index: var(--close);
 }
 
 .features_title{
@@ -28,4 +44,58 @@
     font-weight: 400;
     line-height: 28px; /* 155.556% */
     margin: 0px 0px 72px 0px;
+}
+
+@media(max-width: 1160px){
+    .features{
+        width: 90%;
+    }
+}
+
+@media(max-width: 1000px){
+    .bg_two{
+        width: 450px;
+        top: 390px
+    }
+}
+
+
+@media(max-width: 860px){
+    .features{
+        margin-bottom: 150px;
+    }
+    .features_desc{
+        margin-bottom: 52px;
+    }
+    .bg_two{
+        top: 300px;
+        width: 400px;
+    }
+}
+
+
+@media(max-width: 600px){
+    .features{
+        margin-bottom: 77px;
+    }
+
+    .features_title{
+        font-size: 1.5rem;
+        letter-spacing: -0.075px;
+        margin-bottom: 0px;
+    }
+
+    .features_desc{
+        width: 90%;
+        font-size: 0.9375rem;
+        line-height: 25px; /* 166.667% */
+        margin-bottom: 40px;
+    }
+
+    .bg_two{
+        width: 288.5px;
+        height: 203px;
+        top: initial;
+        bottom: 247px;
+    }
 }
