--- a/src/Components/Header/styles.module.css
+++ b/src/Components/Header/styles.module.css
@@ -17,7 +17,6 @@
 
 .header_content > h1{
     grid-column: 1/3;
-    margin-bottom: 24px;
     color: #242A45;
     font-family: var(--font);
     font-size: 3rem;
@@ -140,6 +139,7 @@
     }
 
     .image_container{
+        width: 100%;
         height: 350px;
     }
 
@@ -149,9 +149,9 @@
     }
 
     .header_content > h1{
-        width: 80%;
         margin: 0px auto 15px auto;
         text-align: center;
+        white-space: nowrap;
     }
 
     .header_content > p{
@@ -199,6 +199,7 @@
         line-height: 40px; /* 133.333% */
         letter-spacing: -0.094px;
         margin-bottom: 16px;
+        white-space: initial;
     }
 
     .header_content > p{
