--- a/src/Components/NavigationBar/MobileNavBar/styles.module.css
+++ b/src/Components/NavigationBar/MobileNavBar/styles.module.css
@@ -49,6 +49,7 @@
     height: 25px;
     grid-column: 1/2;
     grid-row: 1/2;
+    transition: all 0.2s linear, opacity 0;
 }
 
 .menu_close{
@@ -57,6 +58,7 @@
     justify-self: end;
     align-self: center;
     cursor: pointer;
+    transition: all 0.2s linear, opacity 0;
 }
 
 .menu_buttons{
@@ -68,9 +70,11 @@
     grid-column: 1/3;
     margin: 0px;
     padding: 0px;
+    transition: all 0.2s linear, opacity 0;
 }
 
 .menu_buttons > li {
+    transition: all 0.2s linear, opacity 0;
     width: 100%;
 }
 
@@ -134,10 +138,12 @@
     width: 24px;
     height: 24px;
     cursor: pointer;
+    transition: all 0.2s linear, opacity 0;
 }
 
 .menu_twitter{
     width: 24px;
     height: 19.5px;
     cursor: pointer;
+    transition: all 0.2s linear, opacity 0;
 }
